--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Forum</title>
+    <title>Persistent Forum</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
@@ -15,6 +15,7 @@
         <label for="postContent">Your Post:</label>
         <textarea id="postContent" required></textarea>
         <button type="submit">Post</button>
+        <button type="button" id="clearPosts">Clear All Posts</button>
     </form>
     
     <h2>Recent Posts</h2>
