--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <h1>Forum</h1>
     <form id="postForm">
-        <label for="username">Username:</label>
+        <label for="username">Post Author</label>
         <input type="text" id="username" required>
-        <label for="postContent">Your Post:</label>
+        <label for="postContent">Type some words</label>
         <textarea id="postContent" required></textarea>
         <button type="submit">Post</button>
-        <button type="button" id="clearPosts">Clear All Posts</button>
+       /* <button type="button" id="clearPosts">Clear All Posts</button>*/
     </form>
     
     <h2>Recent Posts</h2>
