--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <form id="postForm">
         <label for="username">Post Author</label>
         <input type="text" id="username" required>
-        <label for="postContent">Type some words</label>
+        <label for="postContent">Type some words!</label>
         <textarea id="postContent" required></textarea>
         <button type="submit">Post</button>
-       /* <button type="button" id="clearPosts">Clear All Posts</button>*/
+       //<button type="button" id="clearPosts">Clear All Posts</button>
     </form>
     
     <h2>Recent Posts</h2>
