--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Persistent Forum</title>
+    <title>Simple Forum</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
 <body>
     <h1>Forum</h1>
     <form id="postForm">
-        <label for="username">Post Author</label>
+        <label for="username">Username:</label>
         <input type="text" id="username" required>
-        <label for="postContent">Type some words!</label>
+        <label for="postContent">Your Post:</label>
         <textarea id="postContent" required></textarea>
         <button type="submit">Post</button>
     </form>
@@ -23,3 +23,4 @@
     </div>
 </body>
 </html>
+
