--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div id="postsContainer">
         <!-- Posts will be dynamically added here -->
     </div>
+
+    <button id="clearPosts">Clear All Posts</button>
 </body>
 </html>
-
