--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
     <h1>Forum</h1>
     <form id="postForm">
-        <label for="username">Usename:</label>
+        <label for="username">Username:</label>
         <input type="text" id="username" required>
         <label for="postContent">Your Post:</label>
         <textarea id="postContent" required></textarea>
